kubernetes/argo-cd/projects/aws/production-hm/akhq/environments/production/kubernetes-manifests/hm-akhq-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hm-akhq-ingress
  namespace: production-hm-akhq
  annotations:
    kubernetes.io/ingress.class: traefik
    # https://doc.traefik.io/traefik/reference/routing-configuration/kubernetes/ingress/#on-ingress
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    # https://kubernetes-sigs.github.io/external-dns/latest/docs/annotations/annotations
    external-dns.alpha.kubernetes.io/hostname: akhq.hongbomiao.com
  labels:
    app.kubernetes.io/name: akhq
    app.kubernetes.io/part-of: production-hm-akhq
spec:
  rules:
    - host: akhq.hongbomiao.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hm-akhq
                port:
                  number: 80
  tls:
    - hosts:
        - akhq.hongbomiao.com
      secretName: hm-akhq-certificate
